maze: add maze generation algo
Signed-off-by: Nikita Piatygorskiy <generalhammond16@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(maze WIN32 ${SRC} ${INC})
 target_link_libraries(maze d2d1.dll)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /UMBCS /D_UNICODE /DUNICODE")
+set_property(TARGET maze PROPERTY CXX_STANDARD 20)
